--- a/frontend-client/src/global.css
+++ b/frontend-client/src/global.css
@@ -142,6 +142,12 @@ body {
   line-height: 1.2;
 }
 
+.text-heading-xs{
+  font-size: 1.75rem;    
+   font-weight: 500;
+   line-height: 1.2;
+ }
+
 /* BODY SIZES */
 
 .text-body-lg{
